[package]
name = "smem"
version = "0.1.0"
authors = ["Alex Muscar", "Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1", default-features = false, features = ["std"] }
humansize = "1.1"
libc = "0.2"
rayon = "1.3"
regex = "1.3"
users = { version = "0.10", default-features = false, features = ["cache"] }
